# ames_graphormer

./: .gitignore  README.md  db.sqlite3.bup  default_hparams.toml  default_tuning_hparams.toml  graphormer_hparams.toml  pyproject.toml  pyrightconfig.json  testing.ipynb
data/: data_cleaning.py
gnn-tools/: Cargo.toml  pyproject.toml
gnn-tools/src/: lib.rs
graphormer/: cli.py  functional.py  inference.py  layers.py  model.py  model_analysis.py  norm.py  optimise_temperature.py  results.py  schedulers.py  train.py  utils.py
graphormer/config/: data.py  hparams.py  loss.py  model.py  options.py  scheduler.py  tuning_hparams.py  utils.py
graphormer/data/: data_cleaning.py  dataloader.py
graphormer/data/datasets/: __init__.py  graphormer_dataset.py  hansen.py
graphormer/modules/: model.py
graphormer/modules/attention/: __init__.py  fish.py  linear.py  mha.py  prior.py
graphormer/modules/encoding/: centrality_encoding.py  edge_encoding.py  spatial_encoding.py
graphormer/modules/layers/: __init__.py  encoder.py  ffn.py
graphormer/modules/norm/: __init__.py  crms.py  max.py  rms.py
hparams/: adam_7_128_fish_pyra.toml  adam_7_256_8_pyra_desc.toml
results/: results.ipynb
tests/layers/: test_mha.py
tests/modules/attention/: test_mha.py
tests/modules/encoding/: test_centrality_encoding.py  test_edge_encoding.py  test_spatial_encoding.py
tests/modules/norm/: test_max_norm.py
